# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yaml
page_loader/: PageLoader.py  __init__.py  loader.py  page_loader.py
page_loader/scripts/: page_loader.py
page_loader/src/: get_names.py  images.py
tests/: test_download.py
tests/fixture/: page.html
