[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["nbadin"]
packages = [
    {include = "page_loader"},
]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
requests-mock = "^1.9.3"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
